WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248611
IPC::Connection per instance async reply handler map is not accessible to stream connections
https://bugs.webkit.org/show_bug.cgi?id=248611
Summary
IPC::Connection per instance async reply handler map is not accessible to str...
Kimmo Kinnunen
Reported
2022-12-01 09:47:36 PST
IPC::Connection per instance async reply handler map is not accessible to stream connections Stream connections would need the handler map in order to implement sendWithAsyncReply.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-01 09:48:11 PST
<
rdar://problem/102865370
>
Kimmo Kinnunen
Comment 2
2022-12-01 09:58:41 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7031
EWS
Comment 3
2022-12-06 22:46:49 PST
Committed
257458@main
(0fea03a077b9): <
https://commits.webkit.org/257458@main
> Reviewed commits have been landed. Closing PR #7031 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug